<?xml version="1.0"?> <package>
<name>pcl_obstacle_detector </name> <version >0.0.1</version> <description>
Examples from A Gentle Introduction to ROS </description>
<maintainer email="jokane@cse.sc.edu">
Jason O'Kane
</maintainer>
<license >TODO</license >
 <buildtool_depend>catkin </buildtool_depend>
 <build_depend>geometry_msgs</build_depend>
 <run_depend>geometry_msgs</run_depend>
 <build_depend>sensor_msgs</build_depend>
 <run_depend>sensor_msgs</run_depend>
 <build_depend>pcl_ros</build_depend>
 <run_depend>pcl_ros</run_depend>


</package>
